# carsDetect

./: CMakeLists.txt  Classifier.cpp  Classifier.hpp  LICENSE  README  config.h  maineye.cpp
model/: mean.binaryproto
