cmake_minimum_required(VERSION 2.8)
project( carmodel )
SET(GCC_COVERAGE_COMPILE_FLAGS "-std=c++11 -lpthread -lboost_system -lboost_filesystem")
find_package( OpenCV REQUIRED )
find_package(Caffe REQUIRED)
include_directories(${Caffe_INCLUDE_DIRS})
add_definitions(${Caffe_DEFINITIONS})
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
IF  ( OpenCV_FOUND )
	MESSAGE(STATUS "COMPILING NOW")
	add_executable( carmodel maineye.cpp Classifier.cpp )	
	target_link_libraries( carmodel ${OpenCV_LIBS} ${Caffe_LIBRARIES} )
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
	
